# n64recomp-companion

./: .gitignore  CHANGELOG.md  Containerfile  LICENSE  README.md  THIRD_PARTY.md  dependencies.lock.json  pyproject.toml  requirements-decomp.txt  sbom.spdx.json
.github/workflows/: ci.yml
configs/local-llm/: local-agent.json  mcp-client-config.json
docs/: audit-remediation.md  config-reference.md  elf-generation.md  end-to-end.md  legal-and-scope.md  local-llm-mcp.md  n64recomp-workflow.md  podman.md  readiness-and-repair.md  real-rom-test-suite.md  release-verification.md  runtime-starter.md  splat-and-toolchain.md  troubleshooting.md  verified-facts.md  windows-setup.md
n64recomp_kit/: audit.py  batch.py  cdb.py  cli.py  config.py  doctor.py  elf.py  elf_build.py  ignore_workflow.py  local_agent.py  local_llm.py  local_llm_diagnostics.py  local_llm_templates.py  matching.py  mcp_stdio.py  openai_compat.py  real_rom_report.py  real_rom_suite.py  real_rom_support.py  recomp.py  rom.py  rom_match.py  runtime_template.py  splat.py  splat_repair.py  toolchain.py  util.py  workspace.py
n64recomp_kit/commands/: common.py  debug.py  dispatch.py  elf.py  environment.py  local_llm.py  matching.py  parser.py  recomp.py  rom.py  suite.py  (+2 more)
n64recomp_kit/resources/runtime_starter/: .n64recomp-runtime  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
n64recomp_kit/resources/runtime_starter/assets/fonts/: README.md
n64recomp_kit/resources/runtime_starter/assets/ui/: launcher.rml  pause_menu.rml  settings.rml
n64recomp_kit/resources/runtime_starter/assets/ui/styles/: main.rcss
n64recomp_kit/resources/runtime_starter/cmake/: Dependencies.cmake
n64recomp_kit/resources/runtime_starter/docs/: runtime-template.md
n64recomp_kit/resources/runtime_starter/scripts/: Configure-Windows.ps1
n64recomp_kit/resources/runtime_starter/src/: app_settings.hpp  asset_paths.hpp  rt64_support.cpp  rt64_support.hpp
prompts/: n64-mcp-analysis.md
scripts/: Bootstrap-DecompTools.ps1  Bootstrap-N64Recomp-Windows.ps1  Build-N64Elf.ps1  Build-PodmanImage.ps1  Enter-PodmanShell.ps1  Initialize-PodmanMachine.ps1  Install-WindowsPrereqs.ps1  Invoke-LocalLlmMcpPrompt.ps1  Invoke-RealRomTestSuite.ps1  Invoke-RecompReadiness.ps1  Invoke-RomMatchGate.ps1  Mips-SmokeTest.ps1  New-CdbTraceEvidence.ps1  Start-LMStudioServer.ps1  Start-LlamaCppServer.ps1  Start-Mupen64McpDaemon.ps1  Start-Mupen64McpServer.ps1  Test-LocalLlmMcpWorkflow.ps1  bootstrap_decomp_tools.sh  bootstrap_n64recomp.sh  build_podman_image.sh  check_repo.sh  mips_smoke_test.sh  podman_shell.sh  verify_release.py
tests/: fixture_support.py  test_added_workflows.py  test_audit_remediations.py  test_cdb.py  test_cli.py  test_config.py  test_elf.py  test_elf_build.py  test_local_llm.py  test_matching.py  test_mcp_safety.py  test_real_rom_suite.py  test_rom.py  test_runtime_template.py  test_splat.py  test_toolchain.py  test_workspace.py
tools/: mips_smoke_test.py  mips_toolchain_info.py  n64_apply_tail_split_hints.py  n64_build_elf.py  n64_cdb_evidence.py  n64_cdb_info.py  n64_elf_info.py  n64_elf_symbol_audit.py  n64_emit_elf_build.py  n64_emit_local_llm_workflow.py  n64_emit_matching_configure.py  n64_export_functions.py  n64_filter_ignored.py  n64_init_ledger.py  n64_init_state.py  n64_local_llm_ask.py  n64_local_llm_doctor.py  n64_matching_build.py  n64_mips_link_preflight.py  n64_new_runtime_project.py  n64_patch_data_asm.py  n64_patch_tail_asm.py  n64_real_rom_test.py  n64_recomp_smoke.py  n64_recompiled_c_sanitize.py  n64_rom_build_from_map.py  n64_rom_convert.py  n64_rom_info.py  n64_rom_match_check.py  n64_rom_match_sections.py  n64_scan_unsupported.py  n64_splat_init.py  n64_splat_run.py  n64_sync_ignored.py  n64_tail_split_hints.py  n64_workspace_status.py  n64recomp_batch.py  n64recomp_config_check.py  n64recomp_run.py
(+24 files in other folders)
